--- a/README
+++ b/README
@@ -1,4 +1,11 @@
 # qiyammah
+0
+
+-------    x(4)
+
+5 9 6 7    奧 mysterious, obscure, profound
+
+-------    hex
 
 5 F A 9    復 return; repeat; repeatedly
 6 D 3 B    活 live, exist, survive; lively
